fix(security-cors): enable CORS for production HTTPS in Spring Security config
Fix CORS configuration that was being overridden by Spring Security.

Problem:
- SecurityConfig.java had its own CORS configuration that only allowed localhost
- Spring Security's CorsConfigurationSource takes priority over WebMvcConfigurer
- WebConfig.java changes were being ignored by Spring Security
- Result: Swagger UI still getting "Failed to fetch" errors

Solution:
- Update SecurityConfig.corsConfigurationSource() to include https://* origins
- Add PATCH method to allowed methods for completeness
- Now CORS works consistently in both development and production

CORS now permits:
- Development: http://localhost:* and http://127.0.0.1:*
- Production: https://* (all HTTPS origins including Render)

This is the missing piece - Spring Security CORS config must match WebConfig CORS config.